big updates and new project

--- a/projects/index.html
+++ b/projects/index.html
@@ -43,6 +43,7 @@
 				<h2>Projects</h2>
 				<ul>
 					<li><a href="./project_1">Project 1</a></li>
+					<li><a href="./project_2">Project 2</a></li>
 				</ul>
 
 
