--- a/resources/index.html
+++ b/resources/index.html
@@ -39,6 +39,7 @@
 					<ul>
 						<li><a href="./Hangman2.zip">Hangman</a></li>
 						<li><a href="./APIIntegration.zip">API Integration</a></li>
+						<li><a href="./FavoriteUrlsLiveData.zip">Live Data: Favourites List</a></li>
 					</ul>
 				</div>
 				<div id="code_gists">
@@ -62,6 +63,7 @@
 						<li><a href="https://developer.android.com/about/dashboards/" target="blank">Android API Usage Distribution</a></li>
 						<li><a href="https://github.com/toddmotto/public-apis">Public APIs</a></li>
 						<li><a href="https://jsonformatter.curiousconcept.com/">JSON Formatter</a></li>
+						<li><a href="./ViewingTheContentsOfASQLiteDatabase">Viewing the Contents of a SQLite Database</a></li>
 					</ul>
 				</div>
 			</div>
