--- a/schedule/index.html
+++ b/schedule/index.html
@@ -58,20 +58,20 @@
 						</tr>
 						<tr>
 							<td class="week">Week 3</td>
-							<td class="topic">Web APIs, Threads, AsyncTasks, and Loaders</td>
+							<td class="topic">Web APIs, Threads, AsyncTasks, LiveData, and List Views</td>
 							<td class="assigned"><a href="../projects/studio_2">Studio 2</a></td>
 							<td class="deadlines">Studio due at 11:59PM the day after class</td>
 						</tr>
 						<tr>
 							<td class="week">Week 4</td>
-							<td class="topic">Fragments, Activities, Navigation, List Views, and Loading Data</td>
-							<td class="assigned">Studio 3</td>
+							<td class="topic">Fragments, Activities, Navigation, and Application Life Cycle</td>
+							<td class="assigned">None</td>
 							<td class="deadlines">Studio due at 11:59PM the day after class</td>
 						</tr>
 						<tr>
 							<td class="week">Week 5</td>
-							<td class="topic">SQLite, Data Binding, and Shared Preferences</td>
-							<td class="assigned">Project 2</td>
+							<td class="topic">SQLite and Shared Preferences</td>
+							<td class="assigned"><a href="../projects/project_2">Project 2</a></td>
 							<td class="deadlines">None</td>
 						</tr>
 						<tr>
@@ -101,7 +101,7 @@
 						<tr>
 							<td class="week">Week 10</td>
 							<td class="topic">Data and Refactoring</td>
-							<td class="assigned">Studio 4</td>
+							<td class="assigned">None</td>
 							<td class="deadlines">Studio due at 11:59PM the day after class</td>
 						</tr>
 						<tr>
@@ -164,7 +164,7 @@
 						<div class="block_content">
 							<h1>Week 3</h1>
 							<h2>Topic:</h2>
-							<h3>Web APIs, Threads, AsyncTasks, and Loaders</h3>
+							<h3>Web APIs, Threads, AsyncTasks, LiveData, and ListViews</h3>
 							<h2>Assigned Work/Studio:</h2>
 							<h3><a href="../projects/studio_2">Studio 2</a></h3>
 							<h2>Deadlines:</h2>
@@ -175,9 +175,9 @@
 						<div class="block_content">
 							<h1>Week 4</h1>
 							<h2>Topic:</h2>
-							<h3>Fragments, Activities, Navigation, List Views, and Loading Data</h3>
+							<h3>Fragments, Activities, Navigation, and Application Life Cycle</h3>
 							<h2>Assigned Work/Studio:</h2>
-							<h3>Studio 3</h3>
+							<h3>None</h3>
 							<h2>Deadlines:</h2>
 							<h3>Studio due at 11:59PM the day after class</h3>
 						</div>
@@ -186,9 +186,9 @@
 						<div class="block_content">
 							<h1>Week 5</h1>
 							<h2>Topic:</h2>
-							<h3>SQLite, Data Binding, and Shared Preferences</h3>
+							<h3>SQLite and Shared Preferences</h3>
 							<h2>Assigned Work/Studio:</h2>
-							<h3>Project 2</h3>
+							<h3><a href="../projects/project_2">Project 2</a></h3>
 							<h2>Deadlines:</h2>
 							<h3>None</h3>
 						</div>
@@ -243,7 +243,7 @@
 							<h2>Topic:</h2>
 							<h3>Data and Refactoring</h3>
 							<h2>Assigned Work/Studio:</h2>
-							<h3>Studio 4</h3>
+							<h3>None</h3>
 							<h2>Deadlines:</h2>
 							<h3>Studio due at end of class</h3>
 						</div>
